Initial version of Password Change POC

--- a/Password Changer/views/ChangePasswordCell.xib
+++ b/Password Changer/views/ChangePasswordCell.xib
@@ -20,13 +20,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eI1-TS-Dgp">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hre-dT-EPi" userLabel="LeftView">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="43.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="39"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amazon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KeV-qq-DJb">
-                                        <rect key="frame" x="8" y="8" width="184" height="27.5"/>
+                                        <rect key="frame" x="8" y="8" width="184" height="23"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -42,49 +42,59 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wHP-rC-kbC" userLabel="RightView">
-                                <rect key="frame" x="200" y="0.0" width="120" height="43.5"/>
+                                <rect key="frame" x="200" y="0.0" width="120" height="39"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qSR-Qs-85V" userLabel="Change the password">
-                                        <rect key="frame" x="8" y="8" width="104" height="27.5"/>
+                                        <rect key="frame" x="8" y="8" width="104" height="23"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="9"/>
                                         <state key="normal" title="Change the password">
                                             <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="changePasswordAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="gDI-Lk-o3Z"/>
+                                        </connections>
+                                    </button>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="QbV-Qd-cPl">
+                                        <rect key="frame" x="50" y="9.5" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IVR-UQ-Efb">
+                                        <rect key="frame" x="95" y="8" width="17" height="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="17" id="NMA-SV-c0i"/>
+                                            <constraint firstAttribute="width" constant="17" id="fB0-FP-ZyV"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                        <state key="normal" title="OK">
+                                            <color key="titleColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didEnterOTPOrPassword:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Cdw-ao-1fa"/>
+                                        </connections>
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter OTP" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hra-pP-ZtO">
-                                        <rect key="frame" x="50" y="11" width="62" height="21.5"/>
+                                        <rect key="frame" x="19" y="11" width="68" height="17"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="QbV-Qd-cPl">
-                                        <rect key="frame" x="50" y="12" width="20" height="20"/>
-                                    </activityIndicatorView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OTP:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tlz-QM-qx9">
-                                        <rect key="frame" x="14" y="16" width="28" height="11.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="28" id="3RA-Hv-kZI"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="9"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="qSR-Qs-85V" firstAttribute="top" secondItem="wHP-rC-kbC" secondAttribute="top" constant="8" id="1Ej-9g-LWb"/>
-                                    <constraint firstAttribute="bottom" secondItem="Tlz-QM-qx9" secondAttribute="bottom" constant="16" id="4vl-cU-dnq"/>
-                                    <constraint firstItem="Tlz-QM-qx9" firstAttribute="leading" secondItem="wHP-rC-kbC" secondAttribute="leading" constant="14" id="B4r-p7-q50"/>
-                                    <constraint firstItem="Tlz-QM-qx9" firstAttribute="top" secondItem="wHP-rC-kbC" secondAttribute="top" constant="16" id="B8c-fW-3Xe"/>
+                                    <constraint firstAttribute="bottom" secondItem="hra-pP-ZtO" secondAttribute="bottom" constant="11" id="4Zh-3s-dN7"/>
+                                    <constraint firstItem="hra-pP-ZtO" firstAttribute="leading" secondItem="wHP-rC-kbC" secondAttribute="leading" constant="19" id="BUY-cU-0ZX"/>
                                     <constraint firstItem="QbV-Qd-cPl" firstAttribute="centerY" secondItem="wHP-rC-kbC" secondAttribute="centerY" id="K0i-SY-Ov8"/>
-                                    <constraint firstAttribute="trailing" secondItem="hra-pP-ZtO" secondAttribute="trailing" constant="8" id="KCC-rt-zvc"/>
-                                    <constraint firstAttribute="bottom" secondItem="hra-pP-ZtO" secondAttribute="bottom" constant="11" id="RPL-AL-lzQ"/>
-                                    <constraint firstItem="hra-pP-ZtO" firstAttribute="leading" secondItem="Tlz-QM-qx9" secondAttribute="trailing" constant="8" id="S0F-SW-NtX"/>
+                                    <constraint firstItem="hra-pP-ZtO" firstAttribute="centerY" secondItem="wHP-rC-kbC" secondAttribute="centerY" id="OD9-48-wxx"/>
+                                    <constraint firstItem="hra-pP-ZtO" firstAttribute="top" secondItem="wHP-rC-kbC" secondAttribute="top" constant="11" id="Wik-CA-pkN"/>
                                     <constraint firstItem="QbV-Qd-cPl" firstAttribute="centerX" secondItem="wHP-rC-kbC" secondAttribute="centerX" id="eei-wR-E6e"/>
-                                    <constraint firstItem="hra-pP-ZtO" firstAttribute="top" secondItem="wHP-rC-kbC" secondAttribute="top" constant="11" id="fXK-IT-aYt"/>
+                                    <constraint firstItem="IVR-UQ-Efb" firstAttribute="top" secondItem="wHP-rC-kbC" secondAttribute="top" constant="8" id="hlS-WH-z7R"/>
                                     <constraint firstAttribute="bottom" secondItem="qSR-Qs-85V" secondAttribute="bottom" constant="8" id="onT-hE-qJ6"/>
                                     <constraint firstItem="qSR-Qs-85V" firstAttribute="leading" secondItem="wHP-rC-kbC" secondAttribute="leading" constant="8" id="tiZ-NC-XZ9"/>
+                                    <constraint firstAttribute="bottom" secondItem="IVR-UQ-Efb" secondAttribute="bottom" constant="8" id="uwO-YL-Yn1"/>
                                     <constraint firstAttribute="trailing" secondItem="qSR-Qs-85V" secondAttribute="trailing" constant="8" id="vsD-PQ-QbT"/>
+                                    <constraint firstAttribute="trailing" secondItem="IVR-UQ-Efb" secondAttribute="trailing" constant="8" id="z36-yA-imB"/>
+                                    <constraint firstItem="IVR-UQ-Efb" firstAttribute="leading" secondItem="hra-pP-ZtO" secondAttribute="trailing" constant="8" id="zR7-Ms-pDE"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -112,7 +122,7 @@
             <connections>
                 <outlet property="changePasswordButton" destination="qSR-Qs-85V" id="9qL-er-Z4m"/>
                 <outlet property="enterOtpOrPasswordTextView" destination="hra-pP-ZtO" id="nma-Sh-umk"/>
-                <outlet property="otpOrPasswordLabel" destination="Tlz-QM-qx9" id="BRx-K8-ucQ"/>
+                <outlet property="okButton" destination="IVR-UQ-Efb" id="Vqg-Ig-7VJ"/>
                 <outlet property="progressIndicator" destination="QbV-Qd-cPl" id="moQ-Yl-qPq"/>
                 <outlet property="websiteLabel" destination="KeV-qq-DJb" id="Eey-bd-ugO"/>
             </connections>
