Show passwords on tapping the cell

--- a/Password Changer/views/ChangePasswordCell.xib
+++ b/Password Changer/views/ChangePasswordCell.xib
@@ -97,16 +97,52 @@
                                     <constraint firstItem="IVR-UQ-Efb" firstAttribute="leading" secondItem="hra-pP-ZtO" secondAttribute="trailing" constant="8" id="zR7-Ms-pDE"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mtI-cF-SU2" userLabel="onclickview">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="new password: Raman" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQb-p6-kCX">
+                                        <rect key="frame" x="160" y="8" width="140" height="23"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="140" id="zaf-ZY-RYU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="9"/>
+                                        <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="old password: Raman" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uOI-UF-aw0">
+                                        <rect key="frame" x="20" y="8" width="150" height="23"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="hEC-W1-mcB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="9"/>
+                                        <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="KQb-p6-kCX" secondAttribute="bottom" constant="8" id="9MM-r3-NMG"/>
+                                    <constraint firstItem="uOI-UF-aw0" firstAttribute="leading" secondItem="mtI-cF-SU2" secondAttribute="leading" constant="20" id="Lsv-9x-r46"/>
+                                    <constraint firstAttribute="bottom" secondItem="uOI-UF-aw0" secondAttribute="bottom" constant="8" id="TYi-80-iGv"/>
+                                    <constraint firstItem="uOI-UF-aw0" firstAttribute="top" secondItem="mtI-cF-SU2" secondAttribute="top" constant="8" id="dm2-uI-kWG"/>
+                                    <constraint firstItem="KQb-p6-kCX" firstAttribute="top" secondItem="mtI-cF-SU2" secondAttribute="top" constant="8" id="hkX-wp-uYS"/>
+                                    <constraint firstAttribute="trailing" secondItem="KQb-p6-kCX" secondAttribute="trailing" constant="20" id="m4R-bc-Lfv"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="mtI-cF-SU2" firstAttribute="leading" secondItem="eI1-TS-Dgp" secondAttribute="leading" id="FVr-5l-cTZ"/>
                             <constraint firstAttribute="bottom" secondItem="hre-dT-EPi" secondAttribute="bottom" id="H0o-4e-4q5"/>
                             <constraint firstAttribute="bottom" secondItem="wHP-rC-kbC" secondAttribute="bottom" id="J2M-qU-S8K"/>
                             <constraint firstItem="wHP-rC-kbC" firstAttribute="top" secondItem="eI1-TS-Dgp" secondAttribute="top" id="OEP-oB-zCS"/>
+                            <constraint firstAttribute="bottom" secondItem="mtI-cF-SU2" secondAttribute="bottom" id="P0e-if-Bj1"/>
                             <constraint firstAttribute="trailing" secondItem="wHP-rC-kbC" secondAttribute="trailing" id="Qwr-4p-6Na"/>
+                            <constraint firstAttribute="trailing" secondItem="mtI-cF-SU2" secondAttribute="trailing" id="R0l-bw-aVy"/>
                             <constraint firstItem="hre-dT-EPi" firstAttribute="top" secondItem="eI1-TS-Dgp" secondAttribute="top" id="R7L-BV-j5d"/>
                             <constraint firstItem="wHP-rC-kbC" firstAttribute="leading" secondItem="hre-dT-EPi" secondAttribute="trailing" id="chc-V1-uQ9"/>
                             <constraint firstItem="hre-dT-EPi" firstAttribute="leading" secondItem="eI1-TS-Dgp" secondAttribute="leading" id="ctn-Lb-kJZ"/>
+                            <constraint firstItem="mtI-cF-SU2" firstAttribute="top" secondItem="eI1-TS-Dgp" secondAttribute="top" id="nsK-I7-uAS"/>
                             <constraint firstItem="wHP-rC-kbC" firstAttribute="leading" secondItem="hre-dT-EPi" secondAttribute="trailing" id="y6Z-OL-jy1"/>
                         </constraints>
                     </view>
@@ -122,7 +158,10 @@
             <connections>
                 <outlet property="changePasswordButton" destination="qSR-Qs-85V" id="9qL-er-Z4m"/>
                 <outlet property="enterOtpOrPasswordTextView" destination="hra-pP-ZtO" id="nma-Sh-umk"/>
+                <outlet property="newPasswordLabel" destination="KQb-p6-kCX" id="6jR-bV-ed8"/>
                 <outlet property="okButton" destination="IVR-UQ-Efb" id="Vqg-Ig-7VJ"/>
+                <outlet property="oldPasswordLabel" destination="uOI-UF-aw0" id="fRQ-L7-atr"/>
+                <outlet property="onClickView" destination="mtI-cF-SU2" id="jSr-Sf-j5s"/>
                 <outlet property="progressIndicator" destination="QbV-Qd-cPl" id="moQ-Yl-qPq"/>
                 <outlet property="websiteLabel" destination="KeV-qq-DJb" id="Eey-bd-ugO"/>
             </connections>
